[package]
name = "activities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
thiserror = "1.0.24"
crossbeam-channel = "0.5.6"
colored = "2.0.0"

[lib]
name = "activity"
path = "src/lib/mod.rs"
