[package]
name = "clipstash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clipstash"
path = "src/lib/mod.rs"

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.32"
chrono = { version = "0.4.22", features = ["serde"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
derive_more = "0.99.17"
rand = "0.8.5"
sqlx = { version = "0.6.1", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono", "uuid"] }
handlebars = { version = "4.3.3", features = ["dir_source"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
structopt = "0.3.26"
dotenv = "0.15.0"
tokio = "1.20.1"
crossbeam-channel = "0.5.6"
parking_lot = "0.12.1"
